<resources>
    <string name="app_name">Konsl</string>
    <string name="login">Login</string>
    <string name="konsl_logo">Konsl Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_now">Daftar Sekarang</string>
    <string name="register">Daftar</string>
    <string name="have_account">Sudah punya akun</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="name">Nama</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="birth_place">Tempat Lahir</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="hobby">Hobi</string>
    <string name="address">Alamat</string>
    <string name="logout">Logout</string>
    <string name="title_activity_user_home">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next_consul">Konsul Selanjutnya</string>
    <string name="education">Edukasi</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="more">Selengkapnya</string>
    <string name="article">Artikel</string>
    <string name="title_educations">Edukasi</string>
    <string name="title_consultations">Konsultasi</string>
    <string name="konsl_tutorial">Tutorial Konsl</string>
    <string name="konsl_version_value">v1.0</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur.</string>
    <string name="konsl_description">Aplikasi Konsultasi Kesehatan Mental Mahasiswa</string>
    <string name="problem_history">Riwayat masalah yang dialami</string>
    <string name="effort">Usaha yang telah dilakukan</string>
    <string name="obstacle">Kendala yang dialami</string>
    <string name="counselor_gender">Jenis Kelamin Konselor</string>
    <string name="not_specified">Tidak ditentukan</string>
    <string name="time_request">Permintaan waktu konseling</string>
    <string name="registering_consultation">Daftar Konsultasi</string>
    <string name="cancel">Batal</string>
    <string name="consultation_request">Permohonan Konsultasi</string>
    <string name="error_required">Field ini tidak boleh kosong</string>
    <string name="wait_a_moment">Tunggu sebentar...</string>
    <string name="dummy_text_2">Lorem Ipsum</string>
    <string name="waiting_for_confirmation">Menunggu Konfirmasi</string>
    <string name="register_failed">Pendaftaran gagal, silakan coba lagi</string>
    <string name="please_input_correctly">Harap memasukkan input dengan benar</string>
    <string name="register_success">Pendaftaran berhasil</string>
    <string name="login_failed">Login gagal, silakan coba lagi</string>
    <string name="login_success">Login berhasil</string>
    <string name="requesting_consultation_success">Permohonan konsultasi berhasil</string>
    <string name="requesting_consultation_failed">Permohonan konsultasi gagal, silakan coba lagi</string>
    <string name="requested_time">Diajukan pada %1$s</string>
    <string name="nothing">Tidak ada</string>
    <string name="time_remaining">%1$s lagi</string>
    <string name="error_password_not_equsals">Password konfirmasi beda</string>
    <string name="error_password_minimum">Password tidak boleh kurang dari 6 huruf</string>
    <string name="no_consultation">Belum ada konsultasi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_request">Permohonan</string>
    <string name="title_confirmed">Terkonfirmasi</string>
    <string name="user_profile">Profil Pengguna</string>
    <string name="user_problem">Keluhan Pengguna</string>
    <string name="accept_consultation">Terima Konsultasi</string>
    <string name="problem">Keluhan</string>
    <string name="consultation_time">Waktu konsultasi</string>
    <string name="consultation_date">Tanggal konsultasi</string>
    <string name="confirm">Konfirmasi</string>
    <string name="choose_time">Pilih waktu</string>
    <string name="consultation_accepted">Konsultasi Diterima</string>
    <string name="accepting_consultation_failed">Mengonfirmasi konsultasi gagal</string>
    <string name="write_your_message">Tulis pesan...</string>
    <string name="waiting">Menunggu</string>
    <string name="profile">Profil</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="save_changes_failed">Menyimpan Perubahan Gagal</string>
    <string name="save_changes_success">Berhasil Menyimpan Perubahan</string>
    <string name="create_article">Buat Artikel</string>
    <string name="write_here">Tulis di sini</string>
    <string name="title">Judul</string>
    <string name="write_title_here">Tulis judul di sini...</string>
    <string name="content_article">Isi artikel</string>
    <string name="upload_thumbnail">Upload Thumbnail</string>
    <string name="change_thumbnail">Ganti Thumbnail</string>
    <string name="tutorial">Tutorial</string>
    <string name="choose_tag_article">Pilih tag article</string>
    <string name="publish">Publikasikan</string>
    <string name="please_fill_all_fields">Harap mengisi semua inputan</string>
    <string name="create_article_failed">Membuat Artikel Gagal</string>
    <string name="create_article_success">Membuat Artikel Berhasil</string>
    <string name="creating_article">Sedang Membuat Artikel</string>
    <string name="edit_article">Edit Artikel</string>
    <string name="delete">Hapus</string>
    <string name="update_article_failed">Mengubah artikel gagal</string>
    <string name="update_article_success">Mengubah artikel berhasil</string>
    <string name="delete_article_success">Menghapus artikel berhasil</string>
    <string name="delete_article_failed">Menghapus artikel gagal</string>
</resources>